--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
   <head>
     <title>MiPaginaWeb</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/logogris.png" />
+    <link rel="icon" type="image/x-icon" href="./assets/logogris.png" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div id="root"></div>
-    <div>HOLAA</div>
-    <img src="assets/logogris.png" width="50" alt="">
-    <script type="module" src="src/App.jsx"></script>
+    <script type="module" src="./src/App.jsx"></script>
 
   </body>
 </html>
