--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="light">
 
 <head>
-  <title>(:arlesMatoses</title>
+  <title>carlesMatoses :)</title>
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="https://carlesmatoses.github.io/assets/logogris-4c846364.png" />
   <!-- Core theme CSS (includes Bootstrap)-->
