--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <!-- Core theme CSS (includes Bootstrap)-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Carles Matoses Gimenez works as my portfolio where I upload relevant and recent works. 
+  I'm a computer graphics student with a degree in multimedia technologies. I'm interested in open source softwares, photography and visual effects. 
+  I spend some of my time studiying blender as well as game engines!!">
+  <meta name="keywords" content="Computer Graphics, Programming, Python, Blender, Render, Rendering, Game Engines, Real Time Rendering, Fast Realistic Rendering">
+  <meta name="author" content="Carles Matoses Gimenez">
   <meta property="og:image"
     content="https://github.com/carlesmatoses/carlesmatoses.github.io/blob/main/assets/logogris-4c846364.png" />
 
